--- a/web/resources/css/Style1.css
+++ b/web/resources/css/Style1.css
@@ -7,28 +7,79 @@ and open the template in the editor.
     Created on : Nov 22, 2018, 3:25:42 PM
     Author     : KATY
 */
+            * {
+                box-sizing: border-box;
+               }
 
-  header{
-               box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+          body {
+                margin: 0;
+                }
+
+          header{
+           
+               padding: 20px;
+               text-align: center;
        	       width:100%;
-               height: 100px;
-               background-color: #f1f1f1;
+               height: 150px;
+               background-image:url(dddddd3.jpg);
                margin: 0px auto;
-               display: table;
 
        	   }
-       	   nav {
-                  
+           .topnav {
+                overflow: hidden;
+                background-color: black;
+                }
+           .topnav a {
+                float: left;
+                display: block;
+                color: #f2f2f2;
+                text-align: center;
+                padding: 8px;
+                text-decoration: none;
+               }
+.topnav a:hover {
+                background-color: #ddd;
+                color: black;
+                }
+        .column {
+                float: left;
+                }
+
+/* Left and right column */
+  .column.side {
        	   	   width: 10%;
-       	   	   height: 80%;
-       	   	   float:left;
+       	   	   height: auto;
                    display: table;
-       	   }
-       	   section {
-       	   	   width: 80%;
-       	   	   height: 80%;
-       	   	   float:left;
+                    border-style: ridge;
+                    border-color: lightgray;
+                    background-image: url('../velvet1.jpg');
+                }
+
+/* Middle column */
+.column.middle {
+                   width: 70%;
+       	   	   height: auto;
        	   	   display: table;
+                   border-color:black;
+                }
+        .columnr.side {
+                  float:right;
+       	   	   width: 18%;
+       	   	   height: auto;
+                   display: table;
+                   background-image:white;
+                    border-style: ridge;
+                    border-color: lightgray;
+                }
+
+/* Clear floats after the columns */
+    .row:after {
+               content: "";
+               display: table;
+               clear: both;
+              }
+.column.middle p{
+                   float:left;
            }
            container{
                    display: flex;
@@ -38,34 +89,50 @@ and open the template in the editor.
            footer{
            	   width:100%;
            	   height: 30px;
-           	   background-color: green;
+           	   background-color: #dddddd;
            	   margin: auto;
            	   clear: both;
            }
 
             .headerText{
-           	  display: table-cell;
            	  vertical-align: middle;
-           	  text-align: center;
+                  color:white;
+                  font-style: oblique;
            } 
-           nav a{
-                   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+           .headerText1{
+                 font-style: oblique;
+                 color:#805500;
+           }
+    .column.side a{
                    display: block;
                    width: 90%;
                    padding: 20px;
                    color: black;
-                   background-color: #f1f1f1;
+                   background-color:#f2f2f2;
+                    border-style: ridge;
+                    border-color: lightgray;
            }
-           
+           .columnr.side a{
+                   display: block;
+                   width: 90%;
+                   padding: 20px;
+                   color: black;
+                   float:right;
+                   background-color:#f2f2f2;
+                    border-style: ridge;
+                    border-color: lightgray;
+           }
            .container {
 			display: flex;
 			flex-wrap: wrap;
 			flex-direction: row;}
            
-           .item {
+           .item2 {
 			
-			margin: 10px;
+			
 			padding: 10px;
 			flex-grow: 3;
 			
 		}
+               
+                
