--- a/web/resources/css/productCard.css
+++ b/web/resources/css/productCard.css
@@ -1,11 +1,16 @@
+/* 
+    Created on : Dec 11, 2018, 1:06:39 PM
+    Author     : Katy
+*/
+
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 8px;
+  padding: 4px;
   text-align: center;
-  background-color: #f1f1f1;
-  margin: 8px;
+  background-color: #f2f2f2;
+  margin: 4px;
   height: 400px;
-  width: 300px;
+  width: 290px;
+  border-color:black; 
 }
 .price {
   color: grey;
@@ -14,7 +19,7 @@
 }
 .desc {
     font-size: 12px;
-  float:left; 
+    float:left; 
 }
 
 .button {
@@ -22,7 +27,7 @@
   outline: 0;
   padding: 8px;
   color: white;
-  background-color: #000;
+  background-color: black;
   text-align: center;
   cursor: pointer;
   width:100%;
@@ -31,6 +36,7 @@
 a{
     color: white; 
 }
+
 
 .button:hover {
   opacity: 0.7;
@@ -51,7 +57,7 @@ img {
     justify-content: center;
     align-items: flex-start;
     max-width: 60%;
-    max-height: 35%;
+    max-height: 30%;
     object-fit:cover;
 }
 
